cdebconf (0.134) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Refactor GOBACK handling in newt_go().
  * Refactor GOBACK handling in text_go().
  * Skip error questions when going back in text and newt frontends.
    (Closes: #487691)
  * Use a dynamically allocated rope in strexpand().
    (Closes: #496093)

  [ Colin Watson ]
  * When receiving a new template with DATA, ensure that the corresponding
    question is registered to that template.

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 05 Aug 2008 14:10:24 +0000

cdebconf (0.133) unstable; urgency=low

  [ Frans Pop ]
  * Additional tuning of the dark theme in the newt frontend. Patch from
    Samuel Thibault.

  [ Jérémy Bobbio ]
  * Switch to GtkEntry instead of GtkLabel to display progress info underneath
    the progress bar.  The later has issue when displaying combined LTR and
    RTL scripts.  (Closes: #409412)
  * Fix a segfault happening when GOBACK is selected after adding a new
    question to the set previously seen.  (Closes: #407577)
  * Add support for center and right alignment of select and multiselect
    options in the text, newt and GTK+ frontend.  They can respectively be
    achieved by prefixing a column with ${!ALIGN=CENTER} and ${!ALIGN=RIGHT},
    respectively.
  * Change special handling of partman/choose_partition to use the absence of
    '>' as the first character instead of relying on spaces.
  * Fix column alignment support for special questions
    (e.g.  partman/choose_partition).
  * Add tests for the new terminal plugin.

 -- Otavio Salvador <otavio@debian.org>  Fri, 01 Aug 2008 09:27:37 -0300

cdebconf (0.132) unstable; urgency=low

  [ Joey Hess ]
  * Add a separate queue for noninteractive questions, so that things can
    be done when these questions would be displayed. This is a bit hackish;
    debconf's method of letting questions determine if they are interactive or
    not is really better. But this doesn't need huge changes to cdebconf.